log
Sat, May 17, 2025  8:05:33 PM: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:3: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
   for (int k = 0 ; k < 9 ; k ++)
   ^~~
sudoku.c:71:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
     return list;
     ^~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sat, May 17, 2025  8:09:40 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
7a0dcc1
Sat, May 17, 2025 10:32:50 PM: 
 sudoku.c | 76 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 75 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3a435e2
